--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,13 +43,7 @@ jobs:
         docker logout ${{ steps.login-ecr.outputs.registry }}
         ls
       
-    - name: Deploy to EKS using Helm
-      uses: bitovi/github-actions-deploy-eks-helm@v1.2.4
-      with:
-        eks-cluster-name: dev-eks
-        aws-region: us-east-1  # Adjust this to your region
-        helm-chart-path: ./helm-chart
-        helm-values: |
-          key1: value1
-          key2: value2
+    - name: Deploy nodejs helm chart to EKS
+      run: |
+        helm install demo ./helm-chart
   
