--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,7 @@ jobs:
         
         
     - name: Update kube config
-      run: aws eks update-kubeconfig --name test    
+      run: aws eks update-kubeconfig --name dev-eks    
       
     - name: Deploy nodejs helm chart to EKS
       run: |
