--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
         IMAGE_TAG: weather-${{ github.sha }}
       run: |
         COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-7)
-        IMAGE_TAG="weather-$COMMIT_ID"
+        IMAGE_TAG="weather
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     - name: Log out of Amazon ECR
