--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,5 +48,5 @@ jobs:
       
     - name: Deploy nodejs helm chart to EKS
       run: |
-        helm install demo ./helm-chart
+        helm upgrade --install weather  ./helm-chart -n app --create-namespace
   
