--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,11 +22,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
     
-    - uses: falnyr/replace-env-vars-action@master
-      env:
-        API_KEY: API_KEY
-      with:
-        filename: .env
+
     # see: https://github.com/aws-actions/amazon-ecr-login
     - name: Log in to Amazon ECR
       id: login-ecr
@@ -34,11 +30,11 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        API_KEY: ${{ secrets.API_KEY }}
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: dev-ecr
         IMAGE_TAG: weather-${{ github.sha }}
       run: |
+        echo "API_KEY=${{ secrets.API_KEY }}" > .env
         COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-7)
         IMAGE_TAG="weather"
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
